ingress/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata: 
      labels:
         name: mongo
         app: todoapp
    spec: 
      containers:
      - image: mongo
        name: mongo
        ports:
        - name: mongo
          containerPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db
      volumes: 
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
