ingress/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: web-deployment
spec: 
  replicas: 1
  selector:
    matchLabels: 
      name: web
  template: 
    metadata: 
      labels: 
        name: web
        app: todoapp
    spec: 
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: myweb
        ports: 
        - containerPort: 3000
        resources: 
          limits: 
           cpu: 100m
          requests:
            cpu: 80m
