ingress/web-service.yaml
apiVersion: v1
kind: Service
metadata: 
   name: web-service
   labels: 
      name: web
      app: todoapp
spec: 
  selector:
    name: web
  type: LoadBalancer
  ports: 
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
