ingress/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name:  ingress-service
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: web-service
              port: 
                number: 3000
        - path: /load
          pathType: Prefix
          backend: 
            service: 
              name: php-apache-service
              port:
                number: 80
